新增-专题大片模块-删除专题大片内某部电影功能

--- a/pages/editedList.html
+++ b/pages/editedList.html
@@ -63,7 +63,7 @@
                     <button ng-show="editedList.video"ng-click="editedList.edit(movie.ID)" class="btn btn-xs btn-default" title="编辑">
                         <i class="glyphicon glyphicon-pencil"></i>
                     </button>
-                    <button ng-click="editedList.delMovie(movie.ID)" class="btn btn-xs btn-default" title="删除">
+                    <button ng-click="editedList.delMovie(movie.ID,editedList.video)" class="btn btn-xs btn-default" title="删除">
                         <i class="glyphicon glyphicon-remove"></i>
                     </button>
                     
