修复-专题大片模块-影片列表显示优化：隐藏“操作”

--- a/pages/editedList.html
+++ b/pages/editedList.html
@@ -48,7 +48,7 @@
                 <th>名称</th>
                 <th ng-show="editedList.video">类型</th>
                 <th ng-show="editedList.video">产地</th>
-                <th>操作</th>
+                <th ng-show="editedList.video">操作</th>
             </tr>
         </thead>
         <tbody>
