--- a/pages/addMoreMovieTopic.html
+++ b/pages/addMoreMovieTopic.html
@@ -43,7 +43,7 @@
                 </div>
                 <div class="modal-footer">
                     <a ng-click="aMM.cancel()" class="btn">取消</a>
-                    <button class="btn btn-primary" type="submit" ng-disabled="movieForm.$invalid || aMM.saving ">保存</button>
+                    <button class="btn btn-primary" type="submit" ng-disabled="movieForm.$invalid || aMM.saving ">添加</button>
                 </div>
             </form>  
         </div>
