修改 给默认专题大片 添加导入视频的功能

--- a/pages/addMoreMovieTopic.html
+++ b/pages/addMoreMovieTopic.html
@@ -40,6 +40,10 @@
                         <input type="number" class="form-control" ng-model="aMM.movieInfo.Seq" required>
                     </div>
                     <hr>
+                    <div class="form-group">
+                        <label>价格</label>
+                        <input type="number" class="form-control" ng-model="aMM.movieInfo.Price" required>
+                    </div>
                 </div>
                 <div class="modal-footer">
                     <a ng-click="aMM.cancel()" class="btn">取消</a>
