--- a/pages/addMusic.html
+++ b/pages/addMusic.html
@@ -50,7 +50,7 @@
 
                         <div class="form-group">
                             <label>音乐</label><br>
-                               <input type="file" file-model="myMusic" data-e="none" required><br>
+                               <input type="file" accept="audio/*" file-model="myMusic" data-e="none" required><br>
                                <div ng-repeat="music in addMusic.musicUploadList.data">
                                 上传进度：{{music.img.percentComplete}}  
                                </div>
@@ -72,7 +72,7 @@
 
                         <div class="form-group">
                             <label>音乐图标</label><br>
-                               <input type="file" file-model="myCoverImg" data-e="none" required><br>
+                               <input type="file" accept="image/*" file-model="myCoverImg" data-e="none" required><br>
                                <div ng-repeat="img in addMusic.imgUploadList.data">
                                 <img width="100%" src="{{img.img.src}}" style="width:100px;height:100px;">
                                 上传进度：{{img.img.percentComplete}}  
