--- a/pages/app.html
+++ b/pages/app.html
@@ -22,21 +22,20 @@
         <div class="row">
             <!--左侧导航栏-->
             <div class="col-sm-3 col-left">
-                <a ng-click="app.gotoPage('uploadList')" class="font-bold no-underline cursor-default">
-                    <i class="glyphicon glyphicon-upload"></i>&nbsp&nbsp上传
+                <a ui-sref=".uploadList" class="font-bold no-underline cursor-default">
+                    <i class="glyphicon glyphicon-upload"></i>&nbsp;&nbsp;上传
                 </a>
                 <hr>
-                <a ng-click="app.gotoPage('app.transcodingList')" class="font-bold no-underline cursor-default">
-                    <i class="glyphicon glyphicon-random" style="font-size:14px"></i>&nbsp&nbsp转码
+                <a ui-sref=".transcodingList" class="font-bold no-underline cursor-default">
+                    <i class="glyphicon glyphicon-random" style="font-size:14px"></i>&nbsp;&nbsp;转码
                 </a>
                 <hr>
-                <a ng-click="app.gotoPage('app.notEditedList')" class="font-bold no-underline cursor-default">
-                    <i class="glyphicon glyphicon-import" style="font-size:14px"></i>&nbsp&nbsp待入库
+                <a ui-sref=".notEditedList" class="font-bold no-underline cursor-default">
+                    <i class="glyphicon glyphicon-import" style="font-size:14px"></i>&nbsp;&nbsp;待入库
                 </a>
                 <hr>
-                
                 <a class="font-bold no-underline cursor-default"  data-toggle="collapse" data-target="#collapseExampleVideo" aria-expanded="false" aria-controls="collapseExample" >
-                    <i class="glyphicon glyphicon-film"></i>&nbsp&nbsp视频库
+                    <i class="glyphicon glyphicon-film"></i>&nbsp;&nbsp;视频库
                 </a>
                 <div class="collapse" id="collapseExampleVideo">
                     <li class="well"  ng-click="app.goTOVideoLibrary(videoLib.ID,'true',videoLib.Name)" ng-repeat="videoLib in app.videosLibList">{{videoLib.Name[app.defaultLang]}}</li>
@@ -45,7 +44,7 @@
                 <hr>
 
                 <a class="font-bold no-underline cursor-default"  data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-                    <i class="glyphicon glyphicon-music"></i>&nbsp&nbsp音乐库
+                    <i class="glyphicon glyphicon-music"></i>&nbsp;&nbsp;音乐库
                 </a>
                 <div class="collapse" id="collapseExample">
                     <li class="well"  ng-click="app.goTOMusicLibrary(lib.ID)" ng-repeat="lib in app.musicLibList">{{lib.Name[app.defaultLang]}}</li>
@@ -53,16 +52,23 @@
 
                 <hr>
 
-                <a class="font-bold no-underline cursor-default" data-toggle="collapse" data-target="#collapseExampleMovieTopic" aria-expanded="false" aria-controls="collapseExample"><i class="glyphicon glyphicon-film"></i>&nbsp&nbsp专题大片</a>
+                <a class="font-bold no-underline cursor-default" data-toggle="collapse" data-target="#collapseExampleMovieTopic" aria-expanded="false" aria-controls="collapseExample"><i class="glyphicon glyphicon-film"></i>&nbsp;&nbsp;专题大片</a>
                 <div class="collapse" id="collapseExampleMovieTopic">
                     <li class="well"  ng-repeat="movieTopic in app.movieTopciLibList" ng-click="app.goTOVideoLibrary(movieTopic.ID,'false',movieTopic.Name)">{{movieTopic.Name[app.defaultLang]}}</li>
+                </div>
+
+                <hr>
+
+                <a class="font-bold no-underline cursor-default" data-toggle="collapse" data-target="#collapseExampleTVSeries" aria-expanded="false" aria-controls="collapseExample"><i class="glyphicon glyphicon-film"></i>&nbsp;&nbsp;电视剧</a>
+                <div class="collapse" id="collapseExampleTVSeries">
+                    <li class="well"  ng-repeat="TVSeries in app.TVSeriesLibList" ng-click="app.goToTVSeriesLibrary(TVSeries.ID,TVSeries.Name)">{{TVSeries.Name[app.defaultLang]}}</li>
                 </div>
             </div>
             <!--左侧导航栏-->
             
             <!--pages-->
-            <div ng-show="app.showUploadList" ng-include="app.uploadListUrl" class="autoscroll"></div>
-            <ui-view ng-show="!app.showUploadList"></ui-view>
+            <!-- <div ng-show="app.showUploadList" ng-include="app.uploadListUrl" class="autoscroll"></div> -->
+            <div ui-view=""></div>
             <!--pages-->
 
         </div>
