--- a/pages/editMovieInfo.html
+++ b/pages/editMovieInfo.html
@@ -35,7 +35,7 @@
                     <div class="form-group">
                         <label>封面</label>
                         <br>
-                        <input type="file" file-model="myCoverImg" data-e="none" required>
+                        <input type="file" accept="image/*" file-model="myCoverImg" data-e="none" required>
                         <br>
                         <div ng-repeat="img in editMovieInfo.uploadList.data">
                             <img width="100%" src="{{img.img.src}}">
