--- a/pages/addMoreMovie.html
+++ b/pages/addMoreMovie.html
@@ -34,7 +34,7 @@
                     <hr>
                     <div class="form-group">
                         <label>封面</label><br>
-                           <input type="file" file-model="myCoverImg" data-e="none" required><br>
+                           <input type="file" accept="image/*" file-model="myCoverImg" data-e="none" required><br>
                            <div ng-repeat="img in aMM.uploadList.data">
                             <img width="100%" src="{{img.img.src}}">
                             上传进度：{{img.img.percentComplete}} % 
